# MOTO

./: .gitignore  README.md  data.py  example.py  exmple.py  llm.py  lwt.py  lwtmath.py  main.py  math.py  math_solver.py  migrate.py  pastdata.py  pyproject.toml  requirements.txt  test.py  testmath.py  utils.py
Aflow/: .gitignore  README.md  main.py
Aflow/schemes/: aflow.py
benchmark/: __init__.py  _gpqa.py  _livecodebench.py  _wsc.py  benchmark.py  drop.py  hotpotqa.py  humaneval.py  math.py  mbpp.py
benchmarks/: __init__.py  _bbh.py  _livecodebench.py  benchmark.py  clovertoy.py  gsm8k.py  humaneval.py  math.py  mbpp.py
data/: __init__.py  loader.py
debug/: clover_inner_demo.py
doc/: full_plan.md  masterplan.md  method.md  research_log.md  spec_day1.md  tracing_plan.md  versions.py
doc/past/: anot.py  ranot.py
doc/pastsrc/: _async_moto.py  llm.py  oldclover.py  versions.py
doc/specs/: full_plan.md  method.md  outline.md
exptrace/: .python-version  README.md  pyproject.toml
logs/: 0.00000_20251209_211935.csv  0.80000_20251209_214252.csv  0.80000_20251209_224409.csv  log.json
output/: moto_math_eval_result.csv
output/clover_clovertoy/: code.py
output/ecwo_math/: scheme_epoch_1.py
prompt/: clover.py
scheme/: zaflow.py
schemes/: __init__.py  _moto_prompt.py  aflow.py  base.py  beam.py  clover.py  ecwo.py  inner.py  moto.py  new.py  oldecwo.py  opto.py  veto.py
trace/: README.md  anot.py  data.py  example.ipynb  not.py  pyproject.toml  setup.py  zero.py
utils/: __init__.py  count_data.py  logs.py  make_clovertoy_data.py
(+212 files in other folders)
