[project]
name = "anot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "mlx-lm>=0.29.1",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "regex>=2025.11.3",
    "tenacity>=9.1.2",
    "torch>=2.9.1",
    "trace-opt>=0.1.3.8",
    "tree-sitter>=0.25.2",
]
